--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -54,8 +54,8 @@
 						<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
 							<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px;">
 								{{ h.columnNameAlias || h.columnName }}&nbsp;
-								<i id="{{ h.columnName }}_desc" class="fa fa-sort-desc fw" style="position: absolute; top: 12px;"></i>
-								<i id="{{ h.columnName }}_asc" class="fa fa-sort-up fw" style="position: absolute; top: 12px;"></i>
+								<i class="fa fa-sort-desc fw" ng-class="{'text-danger': (h.columnName == column) && (order == 'desc')}" style="position: absolute; top: 12px;"></i>
+								<i class="fa fa-sort-up fw" ng-class="{'text-danger': (h.columnName == column) && (order == 'asc')}" style="position: absolute; top: 12px;"></i>
 							</a>
 						</th>
 					</tr>
