--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -51,6 +51,20 @@
 				<thead>
 					<tr>
 						<th style="white-space: nowrap; text-align: center;">ลำดับที่</th>
+						<th style="white-space: nowrap; text-align: center;">
+							<a href="" ng-click="columnOrder('sys_appointDate')" style="padding-left: 30px; padding-right: 30px;">
+								วันนัด&nbsp;
+								<i ng-class="{'text-danger': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 12px;"></i>
+								<i ng-class="{'text-danger': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 12px;"></i>
+							</a>
+						</th>
+						<th style="white-space: nowrap; text-align: center;">
+							<a href="" ng-click="columnOrder('sys_nextTimeDate')" style="padding-left: 30px; padding-right: 30px;">
+								วันที่ทำครั้งต่อไป&nbsp;
+								<i ng-class="{'text-danger': ('sys_nextTimeDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 12px;"></i>
+								<i ng-class="{'text-danger': ('sys_nextTimeDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 12px;"></i>
+							</a>
+						</th>
 						<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
 							<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px;">
 								{{ h.columnNameAlias || h.columnName }}&nbsp;
@@ -62,8 +76,10 @@
 				<thead>
 				<!-- <tbody class="noselect"> -->
 				<tbody>
-					<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data.id)" style="cursor: pointer;">
+					<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data)" style="cursor: pointer;">
 						<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
+						<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_appointDate'] | date:format }}</td>
+						<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_nextTimeDate'] | date:format }}</td>
 						<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;">
 							{{ 
 							   h.dataType == 'date' ? (data[h.columnName] | date:format) : 
