--- a/backend/src/main/webapp/app/views/working/tab_tasklist.html
+++ b/backend/src/main/webapp/app/views/working/tab_tasklist.html
@@ -69,7 +69,12 @@
 		<!-- <tbody class="noselect"> -->
 		<tbody>
 			<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data)" ng-dblclick="askModal()" style="cursor: pointer;" ng-class="{info: data.id == idActive}">
-				<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
+				<td style="vertical-align: middle; text-align: center;">
+					<!-- <span class="badge" style="background-color: #337AB7;"> -->
+					<span class="badge" style="background-color: #EC971F;">
+						{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
+					</span>
+				</td>
 				<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_appointDate'] | date:format }}</td>
 				<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_nextTimeDate'] | date:format }}</td>
 				<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;">
@@ -77,7 +82,7 @@
 					   h.dataType == 'date' ? (data[h.columnName] | date:format) : 
 					   h.dataType == 'num' ? (data[h.columnName] | number:2) : 
 					   h.dataType == 'sys_owner' ? data[h.columnName][0].showname : data[h.columnName] 
-					   }}
+					}}
 				</td>
 			</tr>
 		</tbody>
