--- a/backend/src/main/webapp/app/views/working/tab_tasklist.html
+++ b/backend/src/main/webapp/app/views/working/tab_tasklist.html
@@ -71,8 +71,10 @@
 			<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data)" ng-dblclick="askModal()" style="cursor: pointer;" ng-class="{info: data.id == idActive}">
 				<td style="vertical-align: middle; text-align: center;">
 					<!-- <span class="badge" style="background-color: #337AB7;"> -->
-					<span class="badge" style="background-color: #EC971F;">
+					<span>
 						{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
+						<!-- {{ may = (data['sys_appointDate'] | date:format); may == (serverDateTime | date:format) }} -->
+						{{ today == mayDate}}
 					</span>
 				</td>
 				<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_appointDate'] | date:format }}</td>
