--- a/backend/src/main/webapp/app/views/working/tab_addr.html
+++ b/backend/src/main/webapp/app/views/working/tab_addr.html
@@ -11,7 +11,7 @@
 	<table class="table table-striped table-hover">
 		<thead>
 			<tr>
-				<th>ชื่อ</th>
+				<th>ประเภทที่อยู่</th>
 				<th>ที่อยู่ 1</th>
 				<th>ที่อยู่ 2</th>
 				<th>ที่อยู่ 3</th>
@@ -19,25 +19,28 @@
 				<th>Tel.</th>
 				<th>Mobile</th>
 				<th>Fax</th>
-				<th></th>
+				<th style="width: 80px;"></th>
 			</tr>
 		<thead>
 		<tbody>
 			<tr ng-repeat="item in addrObj.items">
 				<td style="vertical-align: middle;">
-			        <span editable-text="item.name" e-name="name" e-form="rowform">{{ item.name }}</span>
+			        <!-- <span editable-text="item.name" e-name="name" e-form="rowform">{{ item.name }}</span> -->
+			        <span editable-select="item.name" e-name="name" e-form="rowform" e-ng-options="n for n in addrObj.names">
+					    {{ item.name }}
+					</span>
 		      	</td>
 		      	<td style="vertical-align: middle;">
-			        <span editable-text="item.addr1" e-name="addr1" e-form="rowform">{{ item.addr1 }}</span>
+			        <span editable-textarea="item.addr1" e-name="addr1" e-form="rowform" e-placeholder="เลขที่ xxx ถ.xxx">{{ item.addr1 }}</span>
 		      	</td>
 		      	<td style="vertical-align: middle;">
-			        <span editable-text="item.addr2" e-name="addr2" e-form="rowform">{{ item.addr2 }}</span>
+			        <span editable-textarea="item.addr2" e-name="addr2" e-form="rowform" e-placeholder="ต.xxx อ.xxx">{{ item.addr2 }}</span>
 		      	</td>
 		      	<td style="vertical-align: middle;">
-			        <span editable-text="item.addr3" e-name="addr3" e-form="rowform">{{ item.addr3 }}</span>
+			        <span editable-textarea="item.addr3" e-name="addr3" e-form="rowform" e-placeholder="จ.xxx">{{ item.addr3 }}</span>
 		      	</td>
 		      	<td style="vertical-align: middle;">
-			        <span editable-text="item.addr4" e-name="addr4" e-form="rowform">{{ item.addr4 }}</span>
+			        <span editable-textarea="item.addr4" e-name="addr4" e-form="rowform" e-placeholder="รหัสไปรษณี">{{ item.addr4 }}</span>
 		      	</td>
 		      	<td style="vertical-align: middle;">
 			        <span editable-text="item.tel" e-name="tel" e-form="rowform">{{ item.tel }}</span>
@@ -48,18 +51,15 @@
 		      	<td style="vertical-align: middle;">
 			        <span editable-text="item.fax" e-name="fax" e-form="rowform">{{ item.fax }}</span>
 		      	</td>
-		      	<td>
+		      	<td style="vertical-align: middle;">
 		      		<form editable-form id="rowform" name="rowform" onbeforesave="addrObj.saveItem($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="addrObj.inserted == item">
-			          <i class="fa fa-floppy-o fa-fw user-action-icon-primary" ng-disabled="rowform.$waiting" onclick="$('#rowform').submit()"></i>
-			          <i class="fa fa-reply fa-fw user-action-icon-primary" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : addrObj.cancelNewItem(item)"></i>
+			          <i class="fa fa-reply fa-fw user-action-icon-primary" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : addrObj.cancelNewItem(item)" title="ยกเลิก"></i>
+			          <i class="fa fa-floppy-o fa-fw user-action-icon-primary" ng-disabled="rowform.$waiting" onclick="$(this.parentElement).submit()" title="บันทึก"></i>
 			        </form>
 			        <div class="buttons" ng-show="!rowform.$visible">
-			          <!-- <button class="btn btn-info" ng-click="rowform.$show()">แก้ใข</button> -->
-			          <!-- <button class="btn btn-danger" ng-click="addrObj.removeItem($index, item.id)">ลบ</button> -->
-			          
-			          <i class="fa fa-pencil-square-o fa-fw user-action-icon-primary" ng-click="rowform.$show()"></i>
-			          <i class="fa fa-times fa-fw user-action-icon-danger" ng-click="addrObj.removeItem($index, item.id)"></i>
-			          <i class="fa fa-print fa-fw user-action-icon-primary"></i>
+			          <i class="fa fa-times fa-fw user-action-icon-danger" ng-click="addrObj.removeItem($index, item.id)" title="ลบ"></i>
+			          <i class="fa fa-pencil-square-o fa-fw user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข"></i>
+			          <i class="fa fa-print fa-fw user-action-icon-primary" title="Print Notice" ng-click="noticeMenu(item.addr1 + ' ' + item.addr2 + '' + item.addr3 + ' ' + item.addr4)"></i>
 			        </div>  
 		      	</td>
 			</tr>
