--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -31,6 +31,7 @@
 				<th style="text-align: center;">Act. Code</th>
 				<th style="text-align: center;">Res. Code</th>
 				<th style="text-align: center;">ผู้บันทึก</th>
+				<th style="text-align: center;"></th>
 			</tr>
 		<thead>
 		<tbody>
@@ -44,6 +45,9 @@
 				<td style="text-align: center;">{{ data.actionCodeText }}</td>
 				<td style="text-align: center;">{{ data.resultCodeText }}</td>
 				<td>{{ data.createdByText }}</td>
+				<td ng-click="askModalObj.deleteTraceDummy($event)" style="cursor: default; text-align: center;">
+					<i class="fa fa-times fa-fw user-action-icon-danger" title="ลบ" ng-click="askModalObj.deleteTrace($event, data.id)"></i>
+				</td>
 			</tr>
 		</tbody>
 	</table>
