--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -46,7 +46,7 @@
 				<td style="text-align: center;">{{ data.resultCodeText }}</td>
 				<td>{{ data.createdByText }}</td>
 				<td ng-click="askModalObj.deleteTraceDummy($event)" style="cursor: default; text-align: center;">
-					<i class="fa fa-times fa-fw user-action-icon-danger" title="ลบ" ng-click="askModalObj.deleteTrace($event, data.id)"></i>
+					<i class="fa fa-times fa-lg user-action-icon-danger" title="ลบ" ng-click="askModalObj.deleteTrace($event, data.id)"></i>
 				</td>
 			</tr>
 		</tbody>
