--- a/backend/src/main/webapp/app/views/working/tab_addr.html
+++ b/backend/src/main/webapp/app/views/working/tab_addr.html
@@ -12,10 +12,10 @@
 		<thead>
 			<tr>
 				<th>ประเภทที่อยู่</th>
-				<th>ที่อยู่ 1</th>
-				<th>ที่อยู่ 2</th>
-				<th>ที่อยู่ 3</th>
-				<th>ที่อยู่ 4</th>
+				<th>ที่อยู่ส่วนที่ 1</th>
+				<th>ที่อยู่ส่วนที่ 2</th>
+				<th>ที่อยู่ส่วนที่ 3</th>
+				<th>ที่อยู่ส่วนที่ 4</th>
 				<th>Tel.</th>
 				<th>Mobile</th>
 				<th>Fax</th>
