--- a/backend/src/main/webapp/app/views/working/tab_3.html
+++ b/backend/src/main/webapp/app/views/working/tab_3.html
@@ -1,4 +1,4 @@
-<style>
+<!-- <style>
 .editable-wrap {
     width: 100%;
 }
@@ -21,22 +21,22 @@
 		<tbody>
 			<tr ng-repeat="item in addrObj.items">
 				<td style="vertical-align: middle;">
-			        <!-- <span editable-text="item.name" e-name="name" e-form="rowformAppointPay" e-ng-options="n for n in addrObj.names">
+			        <span editable-text="item.name" e-name="name" e-form="rowformAppointPay" e-ng-options="n for n in addrObj.names">
 					    {{ item.name }}
-					</span> -->
+					</span>
 					
 					<span editable-text="item.appointPayDate" e-name="appointPayDate" e-form="rowformAppointPay" e-class="form-control" e-readonly="readonly" e-date-parser="dd/MM/yyyy">
 					
 					</span>
 					
-					<!-- <div>
+					<div>
 						<div class="input-group">
 							<input type="text" name="appointDate" class="form-control datepickerAppointDate" style="padding-left: 12px;" 
 								   readonly="readonly" date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.appointDate" 
 								   ng-change="askModalObj.appointDateClick()">
 		                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 		                </div>
-	                </div> -->
+	                </div>
 					
 					
 		      	</td>
@@ -65,4 +65,4 @@
 	</table>
 </div>
 					
-               
+                -->
