--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -93,22 +93,36 @@
 					  
 					  <div class="row">
 						  <div class="col-lg-6">
-							<div class="form-group">
-								<label class="control-label">วันนัด</label>
+							<!-- <div class="form-group">
+								<label class="control-label">วันนัดชำระ</label>
 				                <div class="input-group">
 									<input type="text" name="appointDate" class="form-control datepickerAppointDate" style="padding-left: 12px;" 
 										   readonly="readonly" date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.appointDate" 
 										   ng-change="askModalObj.appointDateClick()">
 				                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 				                </div>
+							</div> -->
+							
+							<div class="form-group">
+								<label class="control-label">วันนัดชำระ | ยอดนัดชำระ</label>
+								<div class="input-group">
+								  <input type="text" name="appointDate" class="form-control datepickerAppointDate" style="padding-left: 12px;" 
+										   readonly="readonly" date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.appointDate" 
+										   ng-change="askModalObj.appointDateClick()">
+								  <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+								  <input type="text" class="form-control" ng-model="askModalObj.trace.appointAmount" ng-disabled="!askModalObj.trace.appointDate" />
+								</div>
 							</div>
+							
+							
+							
 						  </div>
 						  <div class="col-lg-6">					  
 							<div class="form-group" ng-class="{'has-error':saveAskModalForm.nextTimeDate.$invalid}">
-								<label class="control-label">วันที่ทำครั้งต่อไป</label>
+								<label class="control-label">วันนัด Call</label>
 								<div class="input-group">
 									<input type="text" name="nextTimeDate" class="form-control datepickerNextTimeDate" style="padding-left: 12px;" 
-										   readonly="readonly" required date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.nextTimeDate"
+										   readonly="readonly" date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.nextTimeDate"
 										   ng-disabled="askModalObj.trace.appointDate">
 				                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 							    </div>
