--- a/backend/src/main/webapp/app/views/working/tab_related.html
+++ b/backend/src/main/webapp/app/views/working/tab_related.html
@@ -4,8 +4,8 @@
 		<thead>
 			<tr>
 				<th style="white-space: nowrap; text-align: center;">ลำดับที่</th>
-				<th style="white-space: nowrap; text-align: center;">วันนัด</th>
-				<th style="white-space: nowrap; text-align: center;">วันที่ทำครั้งต่อไป</th>
+				<th style="white-space: nowrap; text-align: center;">วันนัดชำระ</th>
+				<th style="white-space: nowrap; text-align: center;">วันนัด Call</th>
 				<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
 					{{ h.columnNameAlias || h.columnName }}
 				</th>
