--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -53,14 +53,14 @@
 						<th style="white-space: nowrap; text-align: center;">ลำดับที่</th>
 						<th style="white-space: nowrap; text-align: center;">
 							<a href="" ng-click="columnOrder('sys_appointDate')" style="padding-left: 30px; padding-right: 30px;">
-								วันนัด&nbsp;
+								วันนัดชำระ&nbsp;
 								<i ng-class="{'text-danger': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 12px;"></i>
 								<i ng-class="{'text-danger': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 12px;"></i>
 							</a>
 						</th>
 						<th style="white-space: nowrap; text-align: center;">
 							<a href="" ng-click="columnOrder('sys_nextTimeDate')" style="padding-left: 30px; padding-right: 30px;">
-								วันที่ทำครั้งต่อไป&nbsp;
+								วันนัด Call&nbsp;
 								<i ng-class="{'text-danger': ('sys_nextTimeDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 12px;"></i>
 								<i ng-class="{'text-danger': ('sys_nextTimeDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 12px;"></i>
 							</a>
