--- a/backend/src/main/webapp/app/views/import_others/search.html
+++ b/backend/src/main/webapp/app/views/import_others/search.html
@@ -47,7 +47,7 @@
 			<tbody>
 				<tr ng-repeat="data in dataLst track by $index">
 					<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
-					<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;">
+					<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 						{{ 
 						   h.dataType == 'date' ? (data[h.columnName] | date:format) : 
 						   h.dataType == 'num' ? (data[h.columnName] | number:2) : 
