--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -99,7 +99,7 @@
 								<tr ng-repeat="data in taskDetails track by $index" ng-class="{'comm-row-selected': data.selected}" ng-mousedown="rowSelect(data, $index, $event)" 
 								    data-context-menu="./views/taskdetail/contextMenu1.html">
 									<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
-									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;">
+									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 										
 										<div ng-show="h.dataType == 'sys_isActive'" style="text-align: center;">
 											<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="data[h.columnName].status"></i>
