--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -9,7 +9,7 @@
 			   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
 			    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword" ng-show="columnSearchSelected.id == 1" style="width: 150px;">
 			    <select name="column" class="form-control" ng-model="formData.keyword" ng-options="option.username as option.showname for option in users" ng-show="columnSearchSelected.id == 2">
-					<option value="">--งานว่าง--</option>
+					<option value="">--ทั้งหมด--</option>
 		  		</select>
 			    
 			    <div class="input-group-btn">
