--- a/backend/src/main/webapp/app/views/working/tab_addr.html
+++ b/backend/src/main/webapp/app/views/working/tab_addr.html
@@ -37,10 +37,10 @@
 			        <span editable-textarea="item.addr2" e-name="addr2" e-form="rowform" e-placeholder="ต.xxx อ.xxx">{{ item.addr2 }}</span>
 		      	</td>
 		      	<td style="vertical-align: middle;">
-			        <span editable-textarea="item.addr3" e-name="addr3" e-form="rowform" e-placeholder="จ.xxx">{{ item.addr3 }}</span>
+			        <span editable-text="item.addr3" e-name="addr3" e-form="rowform" e-placeholder="จ.xxx">{{ item.addr3 }}</span>
 		      	</td>
 		      	<td style="vertical-align: middle;">
-			        <span editable-textarea="item.addr4" e-name="addr4" e-form="rowform" e-placeholder="รหัสไปรษณี">{{ item.addr4 }}</span>
+			        <span editable-text="item.addr4" e-name="addr4" e-form="rowform" e-placeholder="รหัสไปรษณี">{{ item.addr4 }}</span>
 		      	</td>
 		      	<td style="vertical-align: middle;">
 			        <span editable-text="item.tel" e-name="tel" e-form="rowform">{{ item.tel }}</span>
