--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -6,18 +6,15 @@
 			<form class="form-inline" ng-submit="search()">
 			
 			  <div class="form-group input-group">
-			   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
-			    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword" ng-show="columnSearchSelected.id == 1" style="width: 150px;">
-			    <select name="column" class="form-control" ng-model="formData.keyword" ng-options="option.username as option.showname for option in users" ng-show="columnSearchSelected.id == 2">
+			  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
+			  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.username as option.showname for option in users">
 					<option value="">--ทั้งหมด--</option>
 		  		</select>
-			    
-			    <div class="input-group-btn">
-			        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">{{ columnSearchSelected.colName }} <span class="caret"></span></button>
-			        <ul class="dropdown-menu dropdown-menu-right">
-			          <li ng-repeat="c in columnSearchLst"><a href="" ng-click="searchColumnEvent(c.id)">{{ c.colName }}</a></li>
-			        </ul>
-			    </div>
+			  </div>
+			
+			  <div class="form-group input-group">
+			   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
+			    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword" style="width: 150px;">
 			  </div>
 			  		  
 			   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
