--- a/backend/src/main/webapp/app/styles/common.css
+++ b/backend/src/main/webapp/app/styles/common.css
@@ -72,3 +72,25 @@
 .comm-text-align-right {
 	text-align: right;
 }
+
+
+
+
+/* ----------: Override bootstrap css :---------- */
+.table {
+  border: 0.5px solid #BCE8F1;
+}
+.table-bordered > thead > tr > th,
+.table-bordered > tbody > tr > th,
+.table-bordered > tfoot > tr > th,
+.table-bordered > thead > tr > td,
+.table-bordered > tbody > tr > td,
+.table-bordered > tfoot > tr > td {
+   border: 0.5px solid #BCE8F1;
+}
+
+.page-header {
+	color: #337AB7;
+}
+
+/* ----------: Override bootstrap css :---------- */
