--- a/backend/src/main/webapp/app/views/working/main.html
+++ b/backend/src/main/webapp/app/views/working/main.html
@@ -14,7 +14,7 @@
                     	<i class="fa" ng-class="iconBtn"></i>
                     </button>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="padding: 3px;">
                 
                 	<div ui-view></div>
                 	
