--- a/backend/src/main/webapp/app/views/assigntask/main.html
+++ b/backend/src/main/webapp/app/views/assigntask/main.html
@@ -50,7 +50,7 @@
 									<th width="10%">จำนวนเคส</th>
 									<th width="20%">วันที่นำเข้า</th>
 									<th width="10%">
-										<button class="btn btn-outline btn-primary btn-sm" ng-click="">แสดงข้อมูลรวม</button>
+										<!-- <button class="btn btn-outline btn-primary btn-sm" ng-click="">แสดงข้อมูลรวม</button> -->
 									</th>									
 								</tr>
 							<thead>
