--- a/backend/src/main/webapp/app/views/working/tab_tasklist.html
+++ b/backend/src/main/webapp/app/views/working/tab_tasklist.html
@@ -1,86 +1,90 @@
 
-<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1); margin-bottom: 3px;">
-	<form class="form-inline" ng-submit="search()">
-	
-	  	<div class="form-group input-group">
+<div class="panel panel-info" style="margin: 0;">
+	<div class="panel-heading">
+		<form class="form-inline" ng-submit="search()">
+		
+		  <div class="form-group input-group">
 		  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
 		  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.username as option.showname for option in users">
 				<option value="">--ทั้งหมด--</option>
 	  		</select>
-		</div>
+		  </div>
 		
-		<div class="form-group input-group">
+		  <div class="form-group input-group">
 		   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
 		    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword" style="width: 150px;">
-		</div>
-	  		  
-	   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
-	   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
-	</form>
-</div>
+		  </div>
+		  		  
+		   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
+		   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
+		</form>
+	</div>		
+	
+	<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
+		<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
+			{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ totalItems | number:0 }} {{'pagination.items' | translate}})
+		</span>
+		<pagination ng-change="pageChanged()" total-items="totalItems"
+					first-text="{{'pagination.first' | translate}}"
+					previous-text="{{'pagination.previous' | translate}}"
+					next-text="{{'pagination.next' | translate}}"
+					last-text="{{'pagination.last' | translate}}"
+					ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
+					max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
+					rotate="false" num-pages="numPages" style="margin: auto;" />
+		<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
+			<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
+		</span>
+	</div>
 
-<div class="form-group input-group well well-sm" style="padding-top: 3px; padding-bottom: 3px; margin-bottom: 3px;">
-	<span class="input-group-addon" style="border: 0px; background: none;">
-		{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ totalItems | number:0 }} {{'pagination.items' | translate}})
-	</span>
-	<pagination ng-change="pageChanged()" total-items="totalItems"
-				first-text="{{'pagination.first' | translate}}"
-				previous-text="{{'pagination.previous' | translate}}"
-				next-text="{{'pagination.next' | translate}}"
-				last-text="{{'pagination.last' | translate}}"
-				ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
-				max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
-				rotate="false" num-pages="numPages" style="margin: auto;" />
-	<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none;">
-		<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
-	</span>
-</div>
-<div class="table-responsive col-lg-12" style="padding: 0;">
-	<table class="table table-striped table-hover table-bordered">
-		<thead>
-			<tr>
-				<th style="white-space: nowrap; text-align: center;">ลำดับที่</th>
-				<th style="white-space: nowrap; text-align: center;">
-					<a href="" ng-click="columnOrder('sys_appointDate')" style="padding-left: 30px; padding-right: 30px;">
-						วันนัดชำระ&nbsp;
-						<i ng-class="{'text-danger': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 12px;"></i>
-						<i ng-class="{'text-danger': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 12px;"></i>
-					</a>
-				</th>
-				<th style="white-space: nowrap; text-align: center;">
-					<a href="" ng-click="columnOrder('sys_nextTimeDate')" style="padding-left: 30px; padding-right: 30px;">
-						วันนัด Call&nbsp;
-						<i ng-class="{'text-danger': ('sys_nextTimeDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 12px;"></i>
-						<i ng-class="{'text-danger': ('sys_nextTimeDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 12px;"></i>
-					</a>
-				</th>
-				<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
-					<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px;">
-						{{ h.columnNameAlias || h.columnName }}&nbsp;
-						<i ng-class="{'text-danger': (h.columnName == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 12px;"></i>
-						<i ng-class="{'text-danger': (h.columnName == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 12px;"></i>
-					</a>
-				</th>
-			</tr>
-		<thead>
-		<!-- <tbody class="noselect"> -->
-		<tbody>
-			<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data)" ng-dblclick="askModal()" style="cursor: pointer;" ng-class="{info: data.id == idActive}">
-				<td style="vertical-align: middle; text-align: center;">
-					<span class="badge" ng-class="{'comm-bg-color-danger': data['sys_compareDateStatus'] == 1, 'comm-bg-color-warning': data['sys_compareDateStatus'] == 2, 'comm-bg-color-info': data['sys_compareDateStatus'] == 3}">
-						{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
-					</span>
-				</td>
-				<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_appointDate'] | date:format }}</td>
-				<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_nextTimeDate'] | date:format }}</td>
-				<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
-					{{ 
-					   h.dataType == 'date' ? (data[h.columnName] | date:format) : 
-					   h.dataType == 'num' ? (data[h.columnName] | number:2) : 
-					   h.dataType == 'sys_owner' ? data[h.columnName][0].showname : data[h.columnName] 
-					}}
-				</td>
-			</tr>
-		</tbody>
-	</table>
+	<div class="table-responsive" style="padding: 0;">
+		<table class="table table-striped table-hover table-bordered">
+			<thead>
+				<tr>
+					<th style="white-space: nowrap; text-align: center; color: #337AB7;">ลำดับที่</th>
+					<th style="white-space: nowrap; text-align: center;">
+						<a href="" ng-click="columnOrder('sys_appointDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+							วันนัดชำระ&nbsp;
+							<i ng-class="{'text-danger': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+							<i ng-class="{'text-danger': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+						</a>
+					</th>
+					<th style="white-space: nowrap; text-align: center;">
+						<a href="" ng-click="columnOrder('sys_nextTimeDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+							วันนัด Call&nbsp;
+							<i ng-class="{'text-danger': ('sys_nextTimeDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+							<i ng-class="{'text-danger': ('sys_nextTimeDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+						</a>
+					</th>
+					<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
+						<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px; position: relative;">
+							{{ h.columnNameAlias || h.columnName }}&nbsp;
+							<i ng-class="{'text-danger': (h.columnName == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+							<i ng-class="{'text-danger': (h.columnName == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+						</a>
+					</th>
+				</tr>
+			<thead>
+			<!-- <tbody class="noselect"> -->
+			<tbody>
+				<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data)" ng-dblclick="askModal()" style="cursor: pointer; color: #337AB7;" ng-class="{info: data.id == idActive}">
+					<td style="vertical-align: middle; text-align: center;">
+						<span class="badge" ng-class="{'comm-bg-color-danger': data['sys_compareDateStatus'] == 1, 'comm-bg-color-warning': data['sys_compareDateStatus'] == 2, 'comm-bg-color-info': data['sys_compareDateStatus'] == 3}">
+							{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
+						</span>
+					</td>
+					<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_appointDate'] | date:format }}</td>
+					<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_nextTimeDate'] | date:format }}</td>
+					<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
+						{{ 
+						   h.dataType == 'date' ? (data[h.columnName] | date:format) : 
+						   h.dataType == 'num' ? (data[h.columnName] | number:2) : 
+						   h.dataType == 'sys_owner' ? data[h.columnName][0].showname : data[h.columnName] 
+						}}
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+
 </div>
