--- a/backend/src/main/webapp/app/views/working/main.html
+++ b/backend/src/main/webapp/app/views/working/main.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">ข้อมูลงาน</h1>
+			<h1 class="page-header">งานของฉัน</h1>
 		</div>
 	</div>
 	
