--- a/backend/src/main/webapp/app/views/working/tab_addr.html
+++ b/backend/src/main/webapp/app/views/working/tab_addr.html
@@ -8,9 +8,9 @@
 
 
 <div class="table-responsive">	
-	<table class="table table-striped table-hover">
+	<table class="table table-striped table-hover" style="margin: 0;">
 		<thead>
-			<tr>
+			<tr style="color: #337AB7;">
 				<th>ประเภทที่อยู่</th>
 				<th>ที่อยู่ส่วนที่ 1</th>
 				<th>ที่อยู่ส่วนที่ 2</th>
@@ -23,7 +23,7 @@
 			</tr>
 		<thead>
 		<tbody>
-			<tr ng-repeat="item in addrObj.items">
+			<tr ng-repeat="item in addrObj.items" style="color: #337AB7;">
 				<td style="vertical-align: middle;">
 			        <!-- <span editable-text="item.name" e-name="name" e-form="rowform">{{ item.name }}</span> -->
 			        <span editable-select="item.name" e-name="name" e-form="rowform" e-ng-options="n for n in addrObj.names">
