--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -1,8 +1,8 @@
 
 <button type="button" class="btn btn-primary btn-circle" ng-click="askModal()" style="position: absolute; right: 15px; top: -33px;"><i class="fa fa-plus"></i></button>
 
-<div class="form-group input-group well well-sm" style="padding-top: 3px; padding-bottom: 3px; margin-bottom: 3px;">
-	<span class="input-group-addon" style="border: 0px; background: none;">
+<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 0 0 3px 0;">
+	<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
 		{{'pagination.page' | translate}}: {{askModalObj.init.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ askModalObj.init.traceData.totalItems | number:0 }} {{'pagination.items' | translate}})
 	</span>
 	<pagination ng-change="askModalObj.pageChanged()" total-items="askModalObj.init.traceData.totalItems"
@@ -13,15 +13,16 @@
 				ng-model="askModalObj.init.currentPage" items-per-page="askModalObj.init.itemsPerPage"
 				max-size="askModalObj.init.maxSize" class="pagination-sm pull-right" boundary-links="true"
 				rotate="false" num-pages="numPages" style="margin: auto;" />
-	<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none;">
+	<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
 		<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="askModalObj.init.itemsPerPage" 
 				ng-change="askModalObj.changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
 	</span>
 </div>
-<div class="table-responsive col-lg-12" style="padding: 0;">
-	<table class="table table-striped table-hover table-bordered">
+
+<div class="table-responsive" style="padding: 0;">
+	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
-			<tr>
+			<tr style="color: #337AB7;">
 				<th style="text-align: center;">ลำดับที่</th>
 				<th style="text-align: center;">วันที่ติดตาม</th>
 				<th style="text-align: center;">ผลการติดตาม</th>
@@ -36,7 +37,7 @@
 			</tr>
 		<thead>
 		<tbody>
-			<tr ng-repeat="data in askModalObj.init.traceData.traceWorks track by $index" style="cursor: pointer;" ng-click="askModal(data)">
+			<tr ng-repeat="data in askModalObj.init.traceData.traceWorks track by $index" style="cursor: pointer; color: #337AB7;" ng-click="askModal(data)">
 				<td style="text-align: center;">{{ $index + 1 + ((askModalObj.init.currentPage - 1) * askModalObj.init.itemsPerPage) }}</td>
 				<td style="text-align: center;">{{ data.createdDateTime | date : 'dd-MM-yyyy hh:mm:ss' }}</td>
 				<td>{{ data.resultText }}</td>
